operator/pkg/gateway-api/testdata/gateway/gateway-cross-protocol-same-port-same-hostname/output/cross-protocol-same-port-same-hostname.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cross-protocol-same-port-same-hostname
  namespace: gateway-conformance-infra
  resourceVersion: "1000"
spec:
  gatewayClassName: cilium
  listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      hostname: api.example.test
      name: https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: cross-protocol-tls
            namespace: gateway-conformance-infra
    - allowedRoutes:
        kinds:
          - kind: TLSRoute
        namespaces:
          from: Same
      hostname: api.example.test
      name: tls-passthrough
      port: 443
      protocol: TLS
      tls:
        mode: Passthrough
status:
  conditions:
    - lastTransitionTime: "2026-05-05T19:06:19Z"
      message: No Accepted Listeners
      reason: ListenersNotValid
      status: "False"
      type: Accepted
    - lastTransitionTime: "2026-05-05T19:06:19Z"
      message: No Accepted Listeners
      reason: ListenersNotValid
      status: "False"
      type: Programmed
  listeners:
    - attachedRoutes: 1
      conditions:
        - lastTransitionTime: "2026-05-05T19:06:19Z"
          message: 'Listener conflicts with listener "tls-passthrough": same port 443 has overlapping HTTPS and TLS passthrough hostnames.'
          reason: ProtocolConflict
          status: "True"
          type: Conflicted
        - lastTransitionTime: "2026-05-05T19:06:19Z"
          message: 'Listener not valid. Listener conflicts with listener "tls-passthrough": same port 443 has overlapping HTTPS and TLS passthrough hostnames.'
          reason: ProtocolConflict
          status: "False"
          type: Accepted
        - lastTransitionTime: "2026-05-05T19:06:19Z"
          message: Address not ready yet
          reason: Pending
          status: "False"
          type: Programmed
        - lastTransitionTime: "2026-05-05T19:06:19Z"
          message: Resolved Refs
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
      name: https
      supportedKinds:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
        - group: gateway.networking.k8s.io
          kind: GRPCRoute
    - attachedRoutes: 1
      conditions:
        - lastTransitionTime: "2026-05-05T19:06:19Z"
          message: 'Listener conflicts with listener "https": same port 443 has overlapping HTTPS and TLS passthrough hostnames.'
          reason: ProtocolConflict
          status: "True"
          type: Conflicted
        - lastTransitionTime: "2026-05-05T19:06:19Z"
          message: 'Listener not valid. Listener conflicts with listener "https": same port 443 has overlapping HTTPS and TLS passthrough hostnames.'
          reason: ProtocolConflict
          status: "False"
          type: Accepted
        - lastTransitionTime: "2026-05-05T19:06:19Z"
          message: Address not ready yet
          reason: Pending
          status: "False"
          type: Programmed
        - lastTransitionTime: "2026-05-05T19:06:19Z"
          message: Resolved Refs
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
      name: tls-passthrough
      supportedKinds:
        - group: gateway.networking.k8s.io
          kind: TLSRoute
