operator/pkg/gateway-api/testdata/gateway/gateway-cross-protocol-same-port-same-hostname/output/tlsroute-tls-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: tls-route
  namespace: gateway-conformance-infra
  resourceVersion: "1000"
spec:
  hostnames:
    - api.example.test
  parentRefs:
    - name: cross-protocol-same-port-same-hostname
      namespace: gateway-conformance-infra
      sectionName: tls-passthrough
  rules:
    - backendRefs:
        - name: tls-backend
          port: 443
status:
  parents:
    - conditions:
        - lastTransitionTime: "2026-05-05T19:06:19Z"
          message: Accepted TLSRoute
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: "2026-05-05T19:06:19Z"
          message: Service reference is valid
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
      controllerName: io.cilium/gateway-controller
      parentRef:
        name: cross-protocol-same-port-same-hostname
        namespace: gateway-conformance-infra
        sectionName: tls-passthrough
